- fixed spacing issues on checkout pages

--- a/pages/checkout.scss
+++ b/pages/checkout.scss
@@ -5,9 +5,15 @@
 }
 
 .checkoutSidebar {
+  max-width: 370px;
+  float: right;
   @media (max-width: $width-lg) {
     display: none;
   }
+}
+
+.checkoutLeft {
+  max-width: 656px;
 }
 
 .flexCol {
