--- a/static/css/default.css
+++ b/static/css/default.css
@@ -28,7 +28,7 @@ html, body, body>div:first-child, #__next, #__next>div:first-child,#__next>div:f
 
 @media (min-width:1440px) {
   .container {
-    max-width: 1400px;
+    max-width: 1136px;
   }
 }
 
